testing/tests/merge/incompatible_type.stderr
error[E0308]: mismatched types
 --> tests/merge/incompatible_type.rs:4:10
  |
4 | #[derive(InterStruct)]
  |          ^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
  |          |
  |          expected struct `String`, found `i32`
  |
  = note: this error originates in the derive macro `InterStruct` (in Nightly builds, run with -Z macro-backtrace for more info)
